Fixed `z-index` overlapping problem of the sticky navigation

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -94,6 +94,7 @@ body {
 
   position: sticky;
   bottom: 0;
+  z-index: 9;
 }
 
 .navigation-item {
